Add in title about my map

--- a/index.qmd
+++ b/index.qmd
@@ -7,12 +7,23 @@ about:
   image-shape: round
   image-width: 17em
   links: 
-    - text: LinkedIn
+    - icon: linkedin
+      text: LinkedIn
       href: https://www.linkedin.com/in/maryholtam/
-    - text: GitHub
+    - icon: github
+      text: GitHub
       href: https://github.com/maryholtam
-    - text: Email
-      href: mailto:meholtam@gmail.com
+    - icon: envelope
+      text: Email
+      href: "mailto:meholtam@gmail.com"
+page-footer:
+  background: light
+  right: This website is built with {{< fa heart title="a heart" >}}, [{{< fa brands github title="GitHub octocat logo" >}}](https://github.com/samanthacsik/samanthacsik.github.io){target=_blank}, [{{< fa brands r-project title="R Project" >}}](https://www.r-project.org/about.html){target=_blank} and [Quarto](https://quarto.org/){target=_blank}
+format:
+  html:
+    theme: styles.scss
+    toc: true
+    page-layout: full
 ---
 
 Welcome! Thank you for visiting my site.
