--- a/surfandtravel.qmd
+++ b/surfandtravel.qmd
@@ -17,7 +17,7 @@ library(leaflet.extras)
 library(tidyverse)
 
 # Load your surf data (make sure the CSV is in the "data/" folder)
-surf_data <- read_csv("surfandtravel/surf_spots.csv") %>%
+surf_data <- read_csv("surfandtravel/surf_data.csv") %>%
   rename_with(tolower) %>%  # makes column names lowercase
   rename(
     site = site,
