Add tofino to my bucket list

--- a/surfandtravel.qmd
+++ b/surfandtravel.qmd
@@ -97,6 +97,5 @@ I feel so grateful to have had the chance to surf all over my home state of Cali
 
 -   San Sebastian, Spain
 
--   
+-   Tofino, Canada
 
-    # Tofino, Canada
