--- a/index.qmd
+++ b/index.qmd
@@ -16,14 +16,9 @@ about:
     - icon: envelope
       text: Email
       href: "mailto:meholtam@gmail.com"
-page-footer:
-  background: light
-  right: This website is built with {{< fa heart title="a heart" >}}, [{{< fa brands github title="GitHub octocat logo" >}}](https://github.com/samanthacsik/samanthacsik.github.io){target=_blank}, [{{< fa brands r-project title="R Project" >}}](https://www.r-project.org/about.html){target=_blank} and [Quarto](https://quarto.org/){target=_blank}
 format:
   html:
-    theme: styles.scss
-    toc: true
-    page-layout: full
+    css: styles.css
 ---
 
 Welcome! Thank you for visiting my site.
